Kubernetes/Infrastructure/Tests/Clickhouse/clickhouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse
  namespace: infraless-mes
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: clickhouse
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clickhouse
        app.kubernetes.io/instance: clickhouse
    spec:
      containers:
      - args: []
        image: clickhouse/clickhouse-server:24.2
        imagePullPolicy: Always
        name: clickhouse        
        command:
          - /bin/bash
          - -c
          - sed 's/id -g/id -gn/' /entrypoint.sh > /tmp/entrypoint.sh; exec bash /tmp/entrypoint.sh      
        volumeMounts:
        - name: data-folder
          mountPath: /var/lib/clickhouse/
        - name: log-folder
          mountPath: /var/log/clickhouse-server/
        - name: kafkasecrets
          mountPath: /tmp/ClickHouseData/Certificates/Kafka
        - name: clickhousesecrets
          mountPath: /tmp/ClickHouseData/Certificates/Generic
        - name: users
          mountPath: /etc/clickhouse-server/users.d
        - name: config
          mountPath: /etc/clickhouse-server/config.d
      restartPolicy: Always
      volumes:
      - name: data-folder
        persistentVolumeClaim:
          claimName: clickhouse-data
      - name: log-folder
        persistentVolumeClaim:
          claimName: clickhouse-log
      - secret:
          secretName: secrets
        name: kafkasecrets        
      - secret:
          secretName: clickhouse-secrets
        name: clickhousesecrets        
      - configMap:
          items:
          - key: users
            path: users.xml
          name: users
        name: users
      - configMap:
          items:
          - key: config
            path: config.xml
          name: config
        name: config
