Kubernetes/Infrastructure/Tests/Clickhouse/clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  namespace: infraless-mes
spec:
  ports:
  - name: "8443"
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: "9440"
    port: 9440
    protocol: TCP
    targetPort: 9440
  selector:
    app.kubernetes.io/name: clickhouse
  type: ClusterIP
